--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,8 @@
   become: true
 
   tasks:
-  - name: install htop
+  - name: install packages
     package:
-	  name: htop
+      name:
+        - htop
+        - tmux
