--- a/local.yml
+++ b/local.yml
@@ -9,19 +9,31 @@
       name:
         - htop
         - tmux
+        - python3-psutil
+
   - name: copy wallpaper file
     copy:
       src: files/wallpaper.png
       dest: /usr/share/backgrounds/ansible-wallpaper.png
       owner: root
       group: root
+
   - name: set wallpaper
+    become_user: matt
     dconf:
       key: "/org/gnome/desktop/background/picture-uri"
       value: "'file:///usr/share/backgrounds/ansible-wallpaper.png'"
+
   - name: set wallpaper position
+    become_user: matt
     dconf:
       key: "/org/gnome/desktop/background/picture-options"
       value: "'zoom'"
 
-      
+  - name: copy .bashrc file
+    copy:
+      src: files/bashrc
+      dest: /home/matt/.bashrc
+      owner: matt
+      group: matt
+
