--- a/local.yml
+++ b/local.yml
@@ -25,8 +25,10 @@
       - postgresql-13
       - ripgrep
       - rsync
+      - librsync-dev
       - ncdu
       - ufw
+      - nmap
       - libpam-yubico
       - libyubikey-dev
       - yubikey-personalization
@@ -35,3 +37,23 @@
       - ninja-build
       - gettext
       - cmake
+      - apt-file
+      - xbindkeys
+      - whois
+      - dnsutils
+      - libpam-yubico
+      - libyubikey-dev
+      - yubikey-personalization
+      - yubikey-luks
+      - yubikey-manager
+      - libpam-u2f
+      - pcscd
+      - libbz2-dev
+      - libncurses-dev
+      - libffi-dev
+      - libreadline-dev
+      - libsqlite3-dev
+      - libzma-dev
+      - tk-dev
+      - libasound2-dev
+      - libudev-dev
