--- a/local.yml
+++ b/local.yml
@@ -64,7 +64,7 @@
     become_user: matt
     community.general.dconf:
       key: /org/gnome/desktop/interface/gtk-theme
-      value: 'Adwaita-dark'
+      value: "'Adwaita-dark'"
       state: present
   - name: dark gnome terminal
     become_user: matt
