community blank screen

--- a/local.yml
+++ b/local.yml
@@ -94,8 +94,8 @@
   - name: blank screen 15 minutes
     become_user: matt
     community.general.dconf:
-      key: /org/gnome/desktop/session/idle-delay/uint32
-      value: "'900'"
+      key: /org/gnome/desktop/session/idle-delay/
+      value: "uint32 900"
   - name: brightness up
     become_user: matt
     community.general.dconf:
