--- a/local.yml
+++ b/local.yml
@@ -120,3 +120,13 @@
     ansible.builtin.git:
       repo: https://github.com/woodroww/.dotfiles.git 
       dest: /home/matt/.dotfiles
+  - name: stow things
+    ansible.builtin.shell:
+      cmd: stow luanvim linux_zsh git kitty gnome scripts newsboat
+      chdir: "/home/matt/.dotfiles"
+  - name: change shell zsh
+    ansible.builtin.shell:
+      cmd: chsh -s /bin/zsh
+  - name: zsh
+    ansible.builtin.shell:
+      cmd: zsh
