try for romeo 4

--- a/local.yml
+++ b/local.yml
@@ -275,6 +275,6 @@
       state: enabled
       default: deny
   - name: allow ssh
-  - community.general.ufw:
+    community.general.ufw:
       rule: allow
       name: OpenSSH
