--- a/local.yml
+++ b/local.yml
@@ -21,6 +21,7 @@
       - tmux
       - tree
       - pass
+      - gnupg2
       - pwgen
       - sqlite3
       - libssl-dev
@@ -133,6 +134,21 @@
     become_user: matt
     community.general.dconf:
       key: /org/gnome/desktop/interface/clock-show-weekday 
+      value: 'true' 
+  - name: Night Light ON
+    become_user: matt
+    community.general.dconf:
+      key: /org/gnome/settings-daemon/plugins/color/night-light-enabled
+      value: 'true' 
+  - name: Night Light temp
+    become_user: matt
+    community.general.dconf:
+      key: /org/gnome/settings-daemon/plugins/color/night-light-temperature
+      value: "uint32 3979"
+  - name: Night Light schedule
+    become_user: matt
+    community.general.dconf:
+      key: /org/gnome/settings-daemon/plugins/color/night-light-schedule-automatic
       value: 'true' 
 
   - name: dont do anything with media insertion
