--- a/local.yml
+++ b/local.yml
@@ -182,28 +182,34 @@
       chdir: "/home/matt/.dotfiles"
 
   - name: Install apt-transport-https
+    tags: google-chrome
     ansible.builtin.apt:
       state: latest
       update_cache: true
   - name: Add Apt signing key
+    tags: google-chrome
     ansible.builtin.apt_key:
       url: "https://dl.google.com/linux/linux_signing_key.pub"
       state: present
   - name: Add repository into sources list
+    tags: google-chrome
     ansible.builtin.apt_repository:
       repo: deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main
       state: present
       filename: google-chrome
   - name: Install google-chrome-stable
+    tags: google-chrome
     ansible.builtin.apt:
       name: "google-chrome-stable"
       state: latest
       update_cache: true
   - name: chrome dark
+    tags: google-chrome
     become_user: matt
     ansible.builtin.shell:
       cmd: cp /usr/share/applications/google-chrome.desktop ~/.local/share/applications/google-chrome.desktop
   - name: chrome dark part 2
+    tags: google-chrome
     become_user: matt
     ansible.builtin.shell:
       cmd: sed -i 's;/usr/bin/google-chrome-stable;/usr/bin/google-chrome-stable --enable-features=WebUIDarkMode --force-dark-mode;g' ~/.local/share/applications/google-chrome.desktop
