--- a/local.yml
+++ b/local.yml
@@ -300,14 +300,25 @@
       dest: /home/matt/.pyenv/plugins/pyenv-virtualenv
       clone: yes
 
-  - name: get rust
+  - name: check if cargo is installed
+    tags: rust
+    become_user: matt
+    shell: command -v cargo
+    register: cargo_exists
+    ignore_errors: yes
+  - name: Download Installer
+    tags: rust
+    become_user: matt
+    when: cargo_exists is failed
     get_url:
       url: https://sh.rustup.rs
       dest: /tmp/sh.rustup.rs
       mode: '0755'
       force: 'yes'
   - name: install rust
+    tags: rust
     become_user: matt
+    when: cargo_exists is failed
     ansible.builtin.shell: /tmp/sh.rustup.rs -y
 
   - name: turn on firewall
