--- a/rust.yml
+++ b/rust.yml
@@ -1,14 +1,22 @@
 - hosts: localhost
   gather_facts: true
+  become: true
+  become_user: "{{ lookup('env', 'USER') }}"
+
+  pre_tasks:
+    - name: update repositories
+      apt: update_cache=yes
+      become_user: root
+      changed_when: False
+  vars:
+    user: "{{ ansible_user_id }}"
   tasks:
   - name: check if cargo is installed
-    become_user: matt
     shell: command -v cargo
     register: cargo_exists
     ignore_errors: yes
 
   - name: Download Installer
-    become_user: matt
     when: cargo_exists is failed
     get_url:
       url: https://sh.rustup.rs
@@ -19,8 +27,9 @@
       - rust
 
   - name: install rust/cargo
-    become_user: matt
     when: cargo_exists is failed
     shell: /tmp/sh.rustup.rs -y
     tags:
       - rust
+
+
